--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - run: cd payments && npm install
+
+      - name: Run tests
+        run: npm run test:ci
+        working-directory: ./payments
         env:
           STRIPE_KEY: ${{ secrets.STRIPE_KEY }}
-      - run: cd payments && npm install && npm run test:ci
