--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -11,9 +11,7 @@ jobs:
       - run: cd payments && npm install
 
       - name: Run tests
-        run: | 
-          - echo "Organization variable : ${{ secrets.STRIPE_KEY }}"
-            npm run test:ci
+        run: npm run test:ci
         working-directory: ./payments
         env:
           STRIPE_KEY: ${{ secrets.STRIPE_KEY }}
