--- a/payments/package.json
+++ b/payments/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "cookie-session": "^2.0.0",
+    "core-js": "^3.38.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
@@ -38,9 +39,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "mongodb-memory-server": "^8.12.2",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.2.5"
   }
 }
