--- a/.github/workflows/deploy-tickets.yml
+++ b/.github/workflows/deploy-tickets.yml
@@ -20,5 +20,5 @@ jobs:
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - run: doctl kubernetes cluster kubeconfig save k8s-micro-ticket
+      - run: doctl kubernetes cluster kubeconfig save k8s-micro-ticket-cluster
       - run: kubectl rollout restart deployment tickets-depl
