--- a/.github/workflows/deploy-expiration.yml
+++ b/.github/workflows/deploy-expiration.yml
@@ -15,7 +15,7 @@ jobs:
       - run: docker login -u kusamadocker -p $DOCKER_PASSWORD
         env:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS  }}
-      - run: cd expiration && docker build -t kusamadocker/micro-expiration
+      - run: cd expiration && docker build -t kusamadocker/micro-expiration .
       - run: docker push kusamadocker/micro-expiration
       - uses: digitalocean/action-doctl@v2
         with:
