--- a/.github/workflows/deploy-orders.yml
+++ b/.github/workflows/deploy-orders.yml
@@ -15,7 +15,7 @@ jobs:
       - run: docker login -u kusamadocker -p $DOCKER_PASSWORD
         env:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS  }}
-      - run: cd orders && docker build -t kusamadocker/micro-orders
+      - run: cd orders && docker build -t kusamadocker/micro-orders .
       - run: docker push kusamadocker/micro-orders
       - uses: digitalocean/action-doctl@v2
         with:
