--- a/.github/workflows/deploy-tickets.yml
+++ b/.github/workflows/deploy-tickets.yml
@@ -15,7 +15,7 @@ jobs:
       - run: docker login -u kusamadocker -p $DOCKER_PASSWORD
         env:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS  }}
-      - run: cd tickets && docker build -t kusamadocker/micro-tickets
+      - run: cd tickets && docker build -t kusamadocker/micro-tickets .
       - run: docker push kusamadocker/micro-tickets
       - uses: digitalocean/action-doctl@v2
         with:
